--- a/style.css
+++ b/style.css
@@ -4,4 +4,97 @@
 
 #main{
     max-width: 500px;
+    padding: 10px;
+}
+
+.btn-group-wrap {
+    text-align: center;
+}
+
+.btn-group-wrap div{
+    padding-bottom: 6px;
+}
+
+div.btn-group {
+    margin: 0 auto; 
+    text-align: center;
+    width: inherit;
+    display: inline-block;
+}
+
+a {
+    float: left;
+}
+
+.letter-box{
+    width: 60px;
+    height: 60px;
+    font-size: 36px;
+    border: 3px solid lightgray;
+    text-align: center;
+    vertical-align: middle;
+}
+
+#guesses div{
+    padding-bottom: 5px;
+}
+
+#keyboard{
+    max-width: 560px;
+}
+
+#keyboard *{
+    font-size: 22px;
+}
+
+button{
+    height: 64px;
+}
+
+@media (max-height: 730px) {
+    .letter-box{
+        width: 50px;
+        height: 50px;
+        font-size: 30px;
+    }
+
+    button{
+        height: 60px;
+    }
+}
+
+@media (max-height: 660px) {
+    .letter-box{
+        width: 40px;
+        height: 40px;
+        font-size: 24px;
+    }
+
+    button{
+        height: 56px;
+    }
+}
+
+@media (max-width: 575.98px) {
+    #keyboard *{
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 480px) {
+    #keyboard *{
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 450px) {
+    #keyboard *{
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 400px) {
+    #keyboard *{
+        font-size: 10px;
+    }
 }
