--- a/style.css
+++ b/style.css
@@ -30,9 +30,31 @@ a {
     width: 60px;
     height: 60px;
     font-size: 36px;
-    border: 3px solid lightgray;
     text-align: center;
     vertical-align: middle;
+}
+
+.full-correct{
+    border: 0px;
+    background-color: rgb(73, 214, 108);
+}
+
+
+.part-correct{
+    border: 0px;
+    background-color: rgb(230, 220, 80);
+}
+
+.current{
+    border: 2px solid gray;
+}
+
+.filled{
+    border: 2px solid lightgray;
+}
+
+.unfilled{
+    border: 2px solid lightgray;
 }
 
 #guesses div{
@@ -49,52 +71,4 @@ a {
 
 button{
     height: 64px;
-}
-
-@media (max-height: 730px) {
-    .letter-box{
-        width: 50px;
-        height: 50px;
-        font-size: 30px;
-    }
-
-    button{
-        height: 60px;
-    }
-}
-
-@media (max-height: 660px) {
-    .letter-box{
-        width: 40px;
-        height: 40px;
-        font-size: 24px;
-    }
-
-    button{
-        height: 56px;
-    }
-}
-
-@media (max-width: 575.98px) {
-    #keyboard *{
-        font-size: 18px;
-    }
-}
-
-@media (max-width: 480px) {
-    #keyboard *{
-        font-size: 16px;
-    }
-}
-
-@media (max-width: 450px) {
-    #keyboard *{
-        font-size: 12px;
-    }
-}
-
-@media (max-width: 400px) {
-    #keyboard *{
-        font-size: 10px;
-    }
 }
