--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
     text-align: center;
     vertical-align: middle;
     padding-top: 90px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 a {
@@ -16,9 +18,16 @@ a {
 .letter-box{
     width: 60px;
     height: 60px;
-    font-size: 36px;
+    font-size: 38px;
     text-align: center;
     vertical-align: middle;
+}
+
+.row {
+    display: flex;
+    width: 100%;
+    margin: 0 auto 8px;
+    touch-action: manipulation;
 }
 
 .full-correct{
@@ -49,10 +58,21 @@ a {
     border: 2px solid lightgray;
 }
 
+#keyboard{
+    padding-top: 65px;
+}
+
 #guesses div{
     padding-bottom: 5px;
 }
 
 button{
-    height: 56px;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.letter-box + .letter-box, button + button{
+    margin-left: 2px;
 }
