--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ button{
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 50px;
 }
 
 .letter-box + .letter-box, button + button{
